# ai-client

./: .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tmp-call.js  tmp-css.js
.run/: tauri-dev.err
apps/desktop/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/layout/: app-layout.tsx  sidebar.tsx  topbar.tsx
apps/desktop/src/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
apps/desktop/src/features/chat/: chat-view.tsx
apps/desktop/src/features/image/: image-view.tsx
apps/desktop/src/features/settings/: settings-view.tsx  settings-view.tsx.new
apps/desktop/src/lib/: is-tauri.ts  llm.ts  storage.ts  use-api-migrate.ts  use-theme.ts
apps/desktop/src/stores/: app-store.ts  conversation-store.ts
apps/desktop/src/styles/: globals.css
