[package]
name = "ai-client"
version = "0.1.0"
description = "AI Client - Chat & Image"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ai_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
