[package]
name = "ai-client"
version = "0.1.0"
description = "AI Client Desktop"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ai_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1"
http = "1"
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
